--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
   "devDependencies": {
     "firebase": "^9.6.10",
     "react-firebase-hooks": "^5.0.3",
-    "react-router-dom": "6"
+    "react-hot-toast": "^2.2.0",
+    "react-loading-skeleton": "^3.0.3",
+    "react-router-dom": "6",
+    "uuid": "^8.3.2"
   }
 }
